diesel_compile_tests/tests/fail/derive_deprecated/deprecated_table_name.stderr
error: unexpected end of input, expected `=`
       help: The correct format looks like `#[diesel(table_name = foo)]`
  --> tests/fail/derive_deprecated/deprecated_table_name.rs:12:3
   |
12 | #[table_name]
   |   ^^^^^^^^^^

error: expected `=`
  --> tests/fail/derive_deprecated/deprecated_table_name.rs:19:13
   |
19 | #[table_name()]
   |             ^^

error: expected string literal
  --> tests/fail/derive_deprecated/deprecated_table_name.rs:25:16
   |
25 | #[table_name = 1]
   |                ^

error: expected identifier
  --> tests/fail/derive_deprecated/deprecated_table_name.rs:32:16
   |
32 | #[table_name = "1"]
   |                ^^^

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `users`
 --> tests/fail/derive_deprecated/deprecated_table_name.rs:5:16
  |
5 | #[table_name = "users"]
  |                ^^^^^^^ use of unresolved module or unlinked crate `users`
  |
  = help: if you wanted to use a crate named `users`, use `cargo add users` to add it to your `Cargo.toml`
